--- a/web/src/index.css
+++ b/web/src/index.css
@@ -3,6 +3,18 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: rgba(5, 1, 26, 0.897);
+    color: #fff
+}
+
+@media screen and (min-width: 900px) {
+    .Creator {
+        margin-left: 10%;
+        margin-right: 10%;
+        padding-left: 5%;
+        padding-right: 5%;
+        background-color: rgba(5, 1, 26, 0)
+    }
 }
 
 code {
