Started on quiz details page

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -17,6 +17,26 @@ body {
     }
 }
 
+.Creator {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+@media screen and (min-width: 900px) {
+    .Quiz {
+        margin-left: 10%;
+        margin-right: 10%;
+        padding-left: 5%;
+        padding-right: 5%;
+        background-color: rgba(5, 1, 26, 0)
+    }
+}
+
+.Quiz {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
